[workspace]
members = [
  "rate-latency-tool"
]

resolver = "2"

[workspace.package]
version = "3.0.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/rate-latency-tool"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust]
warnings = "deny"

# Clippy lint configuration that can not be applied in clippy.toml
[workspace.lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"

[workspace.dependencies]
async-trait = "0.1.88"
bincode = "1.3.3"
chrono = { version = "0.4.41", default-features = false }
clap = "2.33.1"
futures = "0.3.31"
log = "0.4.27"
rand = "0.8.5"
serde = "1.0.219" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.140"
solana-clap-v3-utils = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-cli-config = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-clock = "2.2.2"
solana-commitment-config = "2.2.1"
solana-compute-budget-interface = "2.2.2"
solana-config-interface = "1.0.0"
solana-connection-cache = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-core = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-faucet = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-fee-calculator = "2.2.1"
solana-hash = "2.3.0"
solana-instruction = "2.3.0"
solana-keypair = "2.2.1"
solana-logger = "2.3.1"
solana-measure = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-message = "2.4.0"
solana-metrics = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-native-token = "2.2.2"
solana-pubkey = { version = "2.4.0", default-features = false }  
solana-pubsub-client = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-rent = "2.2.1"
solana-rpc = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-rpc-client = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-rpc-client-api = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-sdk-ids = "2.2.1"
solana-sha256-hasher = "2.2.1"
solana-signer = "2.2.1"
solana-streamer = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-system-interface = "1.0"
solana-test-validator = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-time-utils = "2.2.1"
solana-tpu-client = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-tpu-client-next = { git = "https://github.com/KirillLykov/solana.git", branch = "klykov/make-some-structures-public-tpu-client-next" }
solana-transaction = "2.2.3"
spl-memo = "6.0.0"
thiserror = "2.0.12"
tokio = "1.46.1"
tokio-util = "0.7.15"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
split-debuginfo = "off"

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

[profile.release-with-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

