[workspace]
members = [
  "rate-latency-tool",
  "node-address-service",
]

resolver = "2"

[workspace.package]
version = "3.0.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/rate-latency-tool"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust]
warnings = "deny"

# Clippy lint configuration that can not be applied in clippy.toml
[workspace.lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"

[workspace.dependencies]
async-std = "1.12.0"
async-trait = "0.1.88"
bincode = "1.3.3"
chrono = { version = "0.4.41", default-features = false }
clap = { version = "3.2.23", features = ["derive", "cargo"] }
csv-async = "1.2"
futures = "0.3.31"
futures-util = "0.3.29"
log = "0.4.27"
rand = "0.8.5"
serde = "1.0.219" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.140"
solana-clap-v3-utils = { git = "https://github.com/anza-xyz/agave.git" }
solana-cli-config = { git = "https://github.com/anza-xyz/agave.git" }
solana-clock = "3.0.0"
solana-commitment-config = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-config-interface = "2.0.0"
solana-connection-cache = { git = "https://github.com/anza-xyz/agave.git" }
solana-core = { git = "https://github.com/anza-xyz/agave.git" }
solana-epoch-schedule = "3.0.0"
solana-epoch-info = "3.0.0"
solana-faucet = { git = "https://github.com/anza-xyz/agave.git" }
solana-fee-calculator = "3.0.0"
solana-hash = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-logger = "3.0.0"
solana-measure = { git = "https://github.com/anza-xyz/agave.git" }
solana-message = "3.0.1"
solana-metrics = { git = "https://github.com/anza-xyz/agave.git" }
solana-native-token = "3.0.0"
solana-pubkey = { version = "3.0.0", default-features = false }
solana-pubsub-client = { git = "https://github.com/anza-xyz/agave.git" }
solana-quic-definitions = "3.0.0"
solana-rent = "3.0.0"
solana-rpc = { git = "https://github.com/anza-xyz/agave.git" }
solana-rpc-client = { git = "https://github.com/anza-xyz/agave.git" }
solana-rpc-client-api = { git = "https://github.com/anza-xyz/agave.git" }
solana-sdk-ids = "3.0.0"
solana-sha256-hasher = "3.0.0"
solana-signature = { version = "3.1.0" }
solana-signer = "3.0.0"
solana-streamer = { git = "https://github.com/anza-xyz/agave.git" }
solana-system-interface = "2.0"
solana-test-validator = { git = "https://github.com/anza-xyz/agave.git" }
solana-time-utils = "3.0.0"
solana-tpu-client = { git = "https://github.com/anza-xyz/agave.git" }
solana-tpu-client-next = { git = "https://github.com/anza-xyz/agave.git" }
solana-transaction = "3.0.1"
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
spl-memo-interface = "2.0.0"
thiserror = "2.0.12"
tokio = "1.46.1"
tokio-util = "0.7.15"
tonic = "0.12.1"
tracing = "0.1"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
split-debuginfo = "off"

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

[profile.release-with-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

