[package]
name = "node-address-service"
description = "Refactored code extraced from tpu-client, will be added to sdk later."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["log"]
dev-context-only-utils = []
log = ["dep:log"]
tracing = ["dep:tracing"]

[dependencies]
async-trait = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true, optional = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-connection-cache = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-keypair = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true, optional = true }
solana-pubkey = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-quic-definitions = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-streamer = { workspace = true }
solana-time-utils = { workspace = true }
solana-tpu-client-next = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
futures = { workspace = true }
serde_json = { workspace = true }
solana-cli-config = { workspace = true }
solana-commitment-config = { workspace = true }
solana-logger = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-streamer = { workspace = true, features = ["dev-context-only-utils"] }