[package]
name = "solana-rate-latency-tool"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
async-std = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv-async = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true, optional = true }
log = { workspace = true }
node-address-service = { path = "../node-address-service" }
serde = { workspace = true }
serde_json = { workspace = true }
solana-clap-v3-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-connection-cache = { workspace = true }
solana-epoch-schedule = { workspace = true, optional = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-logger = { workspace = true }
solana-measure = { workspace = true }
solana-message = { workspace = true }
solana-native-token = { workspace = true }
solana-pubkey = { workspace = true }
solana-pubsub-client = { workspace = true, optional = true }
solana-quic-definitions = { workspace = true, optional = true }
solana-rpc-client = { workspace = true }
# TODO(klykov): remove from here or dev
solana-rpc-client-api = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-time-utils = { workspace = true }
solana-tpu-client = { workspace = true }
solana-tpu-client-next = { workspace = true, features = ["metrics", "agave-unstable-api"] }
solana-transaction = { workspace = true }
spl-memo-interface = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
solana-core = { workspace = true, features = ["dev-context-only-utils"] }
solana-faucet = { workspace = true, features = ["dev-context-only-utils"] }
solana-fee-calculator = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-rent = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sha256-hasher = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-streamer = { workspace = true, features = ["dev-context-only-utils"] }
solana-test-validator = { workspace = true }
solana-epoch-info = { workspace = true }

[features]
default = ["leader_tracker"]
leader_tracker = [
    "futures-util",
    "solana-epoch-schedule",
    "solana-pubsub-client",
    "solana-quic-definitions"
]